--- a/app/src/main/res/drawable/promotions_progress_bar.xml
+++ b/app/src/main/res/drawable/promotions_progress_bar.xml
@@ -4,7 +4,7 @@
   <item android:id="@android:id/background">
     <shape>
       <corners android:radius="12dp" />
-      <solid android:color="#eaeaea" />
+      <solid android:color="#1CFFFFFF" />
     </shape>
   </item>
 
