--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -763,13 +763,30 @@
     <item name="android:maxLines">2</item>
   </style>
 
-  <style name="Promotions.TextStyle.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
-    <item name="android:textColor">#01131f</item>
+  <style name="Promotions.TextStyle.AppName" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/white</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:letterSpacing">0.01</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+    <item name="android:maxLines">1</item>
+    <item name="android:ellipsize">end</item>
+  </style>
+
+  <style name="Promotions.TextStyle.AppName.Future">
+    <item name="android:textColor">@color/promotions_future_text_color</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/white</item>
     <item name="android:textSize">12sp</item>
     <item name="android:letterSpacing">0.01</item>
-    <item name="android:lineSpacingExtra">6sp</item>
     <item name="android:maxLines">3</item>
     <item name="android:ellipsize">end</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Title.Future">
+    <item name="android:textColor">@color/promotions_future_text_color</item>
   </style>
 
   <style name="Promotions.TextStyle.Subtitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
@@ -778,20 +795,16 @@
   </style>
 
   <style name="Promotions.TextStyle.Progress" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
-    <item name="android:textColor">#01131f</item>
+    <item name="android:textColor">@color/white</item>
     <item name="android:textSize">10sp</item>
   </style>
 
-  <style name="Promotions.TextStyle.Title.Disabled" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
-    <item name="android:textColor">#01131f</item>
-    <item name="android:textSize">12sp</item>
-  </style>
-
-  <style name="Promotions.TextStyle.Date" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
-    <item name="android:textColor">#01131f</item>
-    <item name="android:textSize">11sp</item>
+  <style name="Promotions.TextStyle.Date" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/white</item>
+    <item name="android:textSize">9sp</item>
+    <item name="singleLine">true</item>
     <item name="android:ellipsize">end</item>
-    <item name="android:lineSpacingExtra">5sp</item>
+    <item name="android:lineSpacingExtra">1sp</item>
   </style>
 
   <style name="Promotions.TextStyle.Links" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
