--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
   <color name="black">#000000</color>
   <color name="fakeBlack">#313849</color>
   <color name="appc_pink">#fe7073</color>
+  <color name="pink_background">#ff6381</color>
   <color name="navy_blue">#001726</color>
 
   <color name="colorPrimary">#fc9d48</color>
@@ -53,6 +54,8 @@
   <color name="btn_disable_snd_color">#c9c9c9</color>
   <color name="btn_text_enable_color">#ffffff</color>
   <color name="btn_cancel_text">#8f000000</color>
+  <color name="btn_enabled_dark">#001320</color>
+  <color name="btn_disabled_dark">#f7f7f7</color>
 
   <color name="btn_start_gradient_color">#fc9d48</color>
   <color name="btn_end_gradient_color">#ff578c</color>
@@ -95,7 +98,6 @@
   <color name="gamification_how_it_works">#33eaeaea</color>
 
   <color name="balance_active_wallet_grey">#a6a6a6</color>
-  <color name="balance_verify_chip_background">#f7f7f7</color>
   <color name="balance_wallet_verified_chip">#57aa00</color>
 
   <color name="remove_wallet_red">#e44b46</color>
