--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,7 @@
   <color name="gray_alpha_8a">#8a000000</color>
   <color name="gray_alpha_61">#61000000</color>
   <color name="grey_alpha_6b">#6b000000</color>
+  <color name="white_alpha_60p">#99ffffff</color>
 
   <color name="transaction_item_text_color">#de000000</color>
   <color name="transaction_item_snd_text_color">#8a000000</color>
@@ -130,6 +131,7 @@
   <color name="promotions_active_background">#00131f</color>
   <color name="promotions_future_background">#26a69ead</color>
   <color name="promotions_future_text_color">#a69ead</color>
+  <color name="vouchers_card_bottom_color">#002b4b</color>
 
   <!-- Gamification -->
 
