--- a/app/src/main/res/layout/current_level_card.xml
+++ b/app/src/main/res/layout/current_level_card.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="2dp"
     android:layout_marginEnd="2dp"
-    app:cardCornerRadius="12dp"
     android:clipChildren="false"
     android:clipToPadding="false"
+    app:cardCornerRadius="12dp"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
@@ -113,13 +113,13 @@
         android:layout_height="25dp"
         android:layout_marginTop="@dimen/big_margin"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/ic_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="centerInside"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_info"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
@@ -130,7 +130,7 @@
         android:fontFamily="sans-serif-medium"
         android:lineSpacingExtra="5sp"
         android:paddingBottom="12dp"
-        android:textColor="#99FFFFFF"
+        android:textColor="@color/white_alpha_60p"
         android:textSize="11sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@id/percentage_left"
