--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -6,79 +6,98 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     >
-
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/rv_promotions"
+  <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/big_margin"
-      android:orientation="vertical"
-      android:overScrollMode="never"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:itemCount="1"
-      tools:listitem="@layout/item_promotions_gamification"
-      />
-
-  <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/perks_vouchers"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="32dp"
-      android:layout_marginEnd="16dp"
-      app:layout_constraintTop_toBottomOf="@id/rv_promotions"
       >
-
-    <include
-        android:id="@+id/new_item_view"
-        layout="@layout/new_promotion_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="2dp"
-        app:layout_constraintBottom_toTopOf="@id/vouchers_button"
-        app:layout_constraintEnd_toEndOf="@id/vouchers_button"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <Button
-        android:id="@+id/vouchers_button"
-        style="@style/ButtonStyle.Dark"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginTop="8dp"
-        android:text="@string/promotions_vouhers_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <Button
-        android:id="@+id/perks_button"
-        style="@style/ButtonStyle.Dark"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginStart="8dp"
-        android:enabled="false"
-        android:text="@string/promotions_perks_button"
-        app:layout_constraintBottom_toBottomOf="@id/vouchers_button"
-        app:layout_constraintStart_toEndOf="@id/vouchers_button"
-        app:layout_constraintTop_toTopOf="@id/vouchers_button"
-        />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vouchers_perks_viewpager"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:overScrollMode="never"
-        app:layout_constraintTop_toBottomOf="@id/vouchers_button"
-        />
-  </androidx.constraintlayout.widget.ConstraintLayout>
+        >
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_promotions"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/big_margin"
+          android:orientation="vertical"
+          android:overScrollMode="never"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          tools:itemCount="1"
+          tools:listitem="@layout/item_promotions_gamification"
+          />
 
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/perks_vouchers"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="32dp"
+          android:layout_marginEnd="16dp"
+          app:layout_constraintTop_toBottomOf="@id/rv_promotions"
+          >
+
+        <include
+            android:id="@+id/new_item_view"
+            layout="@layout/new_promotion_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="2dp"
+            app:layout_constraintBottom_toTopOf="@id/vouchers_button"
+            app:layout_constraintEnd_toEndOf="@id/vouchers_button"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <RadioButton
+            android:id="@+id/vouchers_button"
+            style="@style/ButtonStyle.Dark"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="8dp"
+            android:button="@null"
+            android:checked="true"
+            android:text="@string/promotions_vouhers_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <RadioButton
+            android:id="@+id/perks_button"
+            style="@style/ButtonStyle.Dark"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginStart="8dp"
+            android:button="@null"
+            android:text="@string/promotions_perks_button"
+            app:layout_constraintBottom_toBottomOf="@id/vouchers_button"
+            app:layout_constraintStart_toEndOf="@id/vouchers_button"
+            app:layout_constraintTop_toTopOf="@id/vouchers_button"
+            />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/perks_vouchers_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="vouchers_button, perks_button"
+            tools:visibility="visible"
+            />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vouchers_perks_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            android:overScrollMode="never"
+            app:layout_constraintTop_toBottomOf="@id/vouchers_button"
+            />
+      </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+  </ScrollView>
   <androidx.coordinatorlayout.widget.CoordinatorLayout
       android:id="@+id/bottomsheet_coordinator_container"
       android:layout_width="match_parent"
