--- a/app/src/main/res/layout/item_promotions_future.xml
+++ b/app/src/main/res/layout/item_promotions_future.xml
@@ -1,86 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Promotions.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="14dp"
-    android:layout_marginEnd="14dp"
-    android:background="@color/promotions_future_background"
-    android:paddingBottom="@dimen/normal_margin"
     >
 
-  <ImageView
-      android:id="@+id/future_icon"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_marginStart="@dimen/normal_margin"
-      android:layout_marginTop="10dp"
-      android:alpha="0.55"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:srcCompat="@drawable/ic_promotions_default"
-      />
-  <TextView
-      android:id="@+id/future_app_name"
-      style="@style/Promotions.TextStyle.AppName.Future"
-      android:layout_width="0dp"
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/normal_margin"
-      android:layout_marginTop="2dp"
-      android:layout_marginEnd="@dimen/normal_margin"
-      android:text="Trivial Drive Sample"
-      app:layout_constraintEnd_toStartOf="@id/future_container_date"
-      app:layout_constraintStart_toEndOf="@id/future_icon"
-      app:layout_constraintTop_toTopOf="@+id/future_icon"
-      />
-
-  <TextView
-      android:id="@+id/future_title"
-      style="@style/Promotions.TextStyle.Title.Future"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="6dp"
-      android:layout_marginEnd="@dimen/normal_margin"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@id/future_app_name"
-      app:layout_constraintTop_toBottomOf="@+id/future_app_name"
-      tools:text="Spend 200 Appcoins in 5 days and earn a bonus of 120 AppCoins Credits"
-      />
-
-  <LinearLayout
-      android:id="@+id/future_container_date"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="@dimen/big_margin"
-      android:background="@drawable/promotions_date_future_background"
-      android:orientation="horizontal"
-      android:paddingTop="2dp"
-      android:paddingBottom="2dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      android:background="@color/promotions_future_background"
+      android:paddingBottom="@dimen/normal_margin"
       >
 
     <ImageView
-        android:layout_width="8dp"
-        android:layout_height="8dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="7dp"
-        app:srcCompat="@drawable/ic_clock"
+        android:id="@+id/future_icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="10dp"
+        android:alpha="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_promotions_default"
+        />
+    <TextView
+        android:id="@+id/future_app_name"
+        style="@style/Promotions.TextStyle.AppName.Future"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="@dimen/normal_margin"
+        android:text="Trivial Drive Sample"
+        app:layout_constraintEnd_toStartOf="@id/future_container_date"
+        app:layout_constraintStart_toEndOf="@id/future_icon"
+        app:layout_constraintTop_toTopOf="@+id/future_icon"
         />
 
     <TextView
-        android:id="@+id/future_expiry_date"
-        style="@style/Promotions.TextStyle.Date"
-        android:layout_width="wrap_content"
+        android:id="@+id/future_title"
+        style="@style/Promotions.TextStyle.Title.Future"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/small_margin"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="1dp"
-        tools:text="Available soon"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="@dimen/normal_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/future_app_name"
+        app:layout_constraintTop_toBottomOf="@+id/future_app_name"
+        tools:text="Spend 200 Appcoins in 5 days and earn a bonus of 120 AppCoins Credits"
         />
 
-  </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/future_container_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:background="@drawable/promotions_date_future_background"
+        android:orientation="horizontal"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
+      <ImageView
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_gravity="center_vertical"
+          android:layout_marginStart="7dp"
+          app:srcCompat="@drawable/ic_clock"
+          />
+
+      <TextView
+          android:id="@+id/future_expiry_date"
+          style="@style/Promotions.TextStyle.Date"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:layout_marginStart="@dimen/small_margin"
+          android:layout_marginEnd="6dp"
+          android:layout_marginBottom="1dp"
+          tools:text="Available soon"
+          />
+
+    </LinearLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
