[APPC-2239] Fixed issue where dashed line would not appear in some devices. Fixed issue where the empty state view would be cut if there was only one perk or one voucher

--- a/app/src/main/res/layout/item_promotions_vouchers.xml
+++ b/app/src/main/res/layout/item_promotions_vouchers.xml
@@ -86,8 +86,9 @@
     <View
         android:id="@+id/dashed_separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:background="@drawable/dashed_line"
+        android:layerType="software"
         app:layout_constraintTop_toBottomOf="@id/voucher_main_view"
         />
 
