--- a/app/src/main/res/layout/fragment_validation_loading.xml
+++ b/app/src/main/res/layout/fragment_validation_loading.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="296dp"
     android:layout_height="254dp"
     android:layout_gravity="center"
-    android:background="@drawable/background_card_grey"
+    android:background="@drawable/background_card_light_grey"
     >
 
   <TextView
