--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1078,4 +1078,52 @@
     <item name="android:textAlignment">center</item>
     <item name="android:textSize">16sp</item>
   </style>
+
+  <!-- E-Voucher Details -->
+
+  <style name="ButtonStyle.Cancel" parent="Base.Widget.AppCompat.ImageButton">
+    <item name="android:background">@color/transparent</item>
+    <item name="android:textColor">@color/fake_black_3</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:paddingStart">@dimen/big_padding</item>
+    <item name="android:paddingEnd">@dimen/big_padding</item>
+    <item name="android:minWidth">64dp</item>
+    <item name="android:minHeight">36dp</item>
+    <item name="android:letterSpacing">.09</item>
+    <item name="textAllCaps">true</item>
+  </style>
+
+  <style name="AppCoinsIconStyle" parent="Widget.AppCompat.TextView">
+    <item name="android:background">@drawable/e_voucher_appcoins_textview_background</item>
+    <item name="android:textColor">@color/white</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:textSize">10sp</item>
+    <item name="android:paddingStart">5dp</item>
+    <item name="android:paddingTop">1dp</item>
+  </style>
+
+  <style name="Theme.EVoucherToolbar" parent="ThemeOverlay.AppCompat.Dark">
+    <item name="titleTextColor">@color/white</item>
+    <item name="android:background">@color/black</item>
+    <item name="colorControlNormal">@color/white</item>
+
+  </style>
+
+  <style name="EVoucherToolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+    <item name="android:textSize">20sp</item>
+    <item name="android:letterSpacing">0.09</item>
+  </style>
+
+  <style name="EVoucher.AppTitle" parent="Widget.AppCompat.TextView">
+    <item name="android:textSize">18sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textColor">@color/fake_black_2</item>
+  </style>
+
+  <style name="EVoucher.AppBonus" parent="Widget.AppCompat.TextView">
+    <item name="android:textSize">18sp</item>
+    <item name="android:textColor">@color/black</item>
+  </style>
+
 </resources>
