--- a/app/src/main/res/layout/item_page_perk_vouchers.xml
+++ b/app/src/main/res/layout/item_page_perk_vouchers.xml
@@ -8,7 +8,7 @@
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/page_recycler"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:nestedScrollingEnabled="false"
       android:orientation="vertical"
       android:overScrollMode="never"
