--- a/app/src/main/res/layout/layout_voucher_code_detail.xml
+++ b/app/src/main/res/layout/layout_voucher_code_detail.xml
@@ -8,7 +8,7 @@
 
   <TextView
       android:id="@+id/title"
-      style="@style/Home.Vouchers.Title"
+      style="@style/Transactions.Details.Vouchers.Title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
@@ -32,26 +32,21 @@
       >
     <TextView
         android:id="@+id/code_text"
+        style="@style/Transactions.Details.Vouchers.CodeText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="sans-serif"
         android:gravity="center"
-        android:letterSpacing="0.04"
-        android:lineSpacingExtra="4sp"
-        android:textColor="@color/black"
-        android:textSize="19sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/copy_address"
+        app:layout_constraintEnd_toStartOf="@+id/copy_code"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="12534520653235"
         />
 
     <ImageView
-        android:id="@+id/copy_address"
+        android:id="@+id/copy_code"
         android:layout_width="26dp"
         android:layout_height="20dp"
         android:layout_marginEnd="16dp"
@@ -70,7 +65,7 @@
 
   <TextView
       android:id="@+id/redeem_instructions"
-      style="@style/Home.Vouchers.RedeemText"
+      style="@style/Transactions.Details.Vouchers.RedeemText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="28dp"
