--- a/app/src/main/res/values/styles_transactions.xml
+++ b/app/src/main/res/values/styles_transactions.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="Home" />
+  <style name="Transactions" />
 
-  <style name="Home.Vouchers" />
+  <style name="Transactions.Details" />
 
-  <style name="Home.Vouchers.Title">
+  <style name="Transactions.Details.Vouchers" />
+
+  <style name="Transactions.Details.Vouchers.Title">
     <item name="android:fontFamily">sans-serif</item>
     <item name="android:letterSpacing">0.01</item>
     <item name="android:lineSpacingExtra">9sp</item>
@@ -13,12 +15,21 @@
     <item name="android:textSize">17sp</item>
   </style>
 
-  <style name="Home.Vouchers.RedeemText">
+  <style name="Transactions.Details.Vouchers.RedeemText">
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:letterSpacing">0.01</item>
     <item name="android:lineSpacingExtra">10sp</item>
     <item name="android:textColor">@color/black</item>
     <item name="android:textSize">16sp</item>
     <item name="android:textStyle">normal</item>
+  </style>
+
+  <style name="Transactions.Details.Vouchers.CodeText">
+    <item name="android:fontFamily">sans-serif</item>
+    <item name="android:letterSpacing">0.04</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">19sp</item>
+    <item name="android:textStyle">bold</item>
   </style>
 </resources>
