--- a/app/src/main/res/layout/layout_active_subscription_content.xml
+++ b/app/src/main/res/layout/layout_active_subscription_content.xml
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="4dp"
-        android:src="@drawable/ic_info_grey"
+        android:src="@drawable/ic_info_grey_fill"
         />
 
   </LinearLayout>
