[WAL-161] Added return transition to recycler view

--- a/app/src/main/res/layout/fragment_subscription_list.xml
+++ b/app/src/main/res/layout/fragment_subscription_list.xml
@@ -32,15 +32,17 @@
       app:layout_constraintBottom_toBottomOf="@id/layout_guideline"
       />
 
-  <include
+  <ProgressBar
       android:id="@+id/loading_animation"
-      layout="@layout/subs_list_skeleton"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:visibility="invisible"
       />
 
   <androidx.core.widget.NestedScrollView
