--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -252,7 +252,7 @@
           android:layout_marginEnd="@dimen/half_large_margin"
           android:paddingBottom="40dp"
           android:visibility="gone"
-          app:layout_constraintTop_toBottomOf="@id/bottom_separator"
+          app:layout_constraintTop_toBottomOf="@id/more_detail"
           />
 
       <TextView
