[APPC-2243] Extracted some layout logic from fragments to activity to make the smaller amount of changes depending on what calls the activity. Fixed tests

--- a/app/src/main/res/layout/adyen_credit_card_layout.xml
+++ b/app/src/main/res/layout/adyen_credit_card_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:theme="@style/AdyenMaterialAppTheme"
@@ -13,7 +13,6 @@
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:animateLayoutChanges="true"
-      android:background="@drawable/background_card_light_grey"
       android:orientation="vertical"
       >
     <RelativeLayout
