--- a/app/src/main/res/layout/local_payment_layout.xml
+++ b/app/src/main/res/layout/local_payment_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
@@ -12,7 +12,6 @@
       android:id="@+id/progress_bar"
       android:layout_width="match_parent"
       android:layout_height="336dp"
-      android:background="@drawable/background_card"
       android:gravity="center"
       android:visibility="gone"
       tools:visibility="visible"
