--- a/app/src/main/res/layout/merged_appcoins_layout.xml
+++ b/app/src/main/res/layout/merged_appcoins_layout.xml
@@ -2,18 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
     >
   <RelativeLayout
       android:id="@+id/payment_method_main_view"
-      android:layout_width="@dimen/payment_methods_width"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:animateLayoutChanges="true"
-      android:background="@drawable/background_card"
       android:orientation="vertical"
       >
     <ProgressBar
