--- a/app/src/main/res/layout-land/adyen_credit_card_pre_selected.xml
+++ b/app/src/main/res/layout-land/adyen_credit_card_pre_selected.xml
@@ -2,17 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
-    android:background="@drawable/background_card"
     android:theme="@style/AdyenMaterialAppTheme"
     >
 
   <RelativeLayout
       android:id="@+id/main_view_pre_selected"
-      android:layout_width="@dimen/payment_methods_width_landscape"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:animateLayoutChanges="true"
