--- a/app/src/main/res/layout-land/earn_appcoins_layout.xml
+++ b/app/src/main/res/layout-land/earn_appcoins_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/background_card"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:maxHeight="300dp"
