--- a/app/src/main/res/layout-land/fragment_billing_address.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
-    android:background="@drawable/background_card"
     android:maxHeight="300dp"
     android:theme="@style/MaterialAppTheme"
     >
