--- a/app/src/main/res/layout-land/iab_update_required_layout.xml
+++ b/app/src/main/res/layout-land/iab_update_required_layout.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
-    android:background="@drawable/background_card"
     >
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/mid_guideline"
