--- a/app/src/main/res/layout-land/local_payment_layout.xml
+++ b/app/src/main/res/layout-land/local_payment_layout.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
@@ -11,7 +11,6 @@
       android:id="@+id/progress_bar"
       android:layout_width="match_parent"
       android:layout_height="276dp"
-      android:background="@drawable/background_card"
       android:gravity="center"
       android:visibility="gone"
       tools:visibility="gone"
