--- a/app/src/main/res/layout-land/pending_user_payment_view.xml
+++ b/app/src/main/res/layout-land/pending_user_payment_view.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width_landscape"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/background_card"
     android:clipChildren="false"
     android:clipToPadding="false"
     >
