--- a/app/src/main/res/layout/earn_appcoins_layout.xml
+++ b/app/src/main/res/layout/earn_appcoins_layout.xml
@@ -1,17 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/main_view"
-      android:layout_width="@dimen/payment_methods_width"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:animateLayoutChanges="true"
-      android:background="@drawable/background_card"
       android:orientation="vertical"
       >
     <ProgressBar
