--- a/app/src/main/res/layout/fragment_billing_address.xml
+++ b/app/src/main/res/layout/fragment_billing_address.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/background_card"
     android:clickable="true"
     android:elevation="2dp"
     android:focusable="true"
