--- a/app/src/main/res/layout/iab_update_required_layout.xml
+++ b/app/src/main/res/layout/iab_update_required_layout.xml
@@ -1,11 +1,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
-    android:background="@drawable/background_card"
     >
   <com.airbnb.lottie.LottieAnimationView
       android:id="@+id/update_animation"
