--- a/app/src/main/res/layout/payment_methods_layout.xml
+++ b/app/src/main/res/layout/payment_methods_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/payment_methods_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:animateLayoutChanges="true"
@@ -11,10 +11,9 @@
 
   <RelativeLayout
       android:id="@+id/payment_method_main_view"
-      android:layout_width="@dimen/payment_methods_width"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:background="@drawable/background_card"
       >
 
     <ProgressBar
@@ -123,6 +122,7 @@
               android:layout_width="match_parent"
               android:layout_height="216dp"
               android:layout_centerInParent="true"
+              android:nestedScrollingEnabled="false"
               android:orientation="vertical"
               android:overScrollMode="never"
               android:paddingStart="16dp"
