--- a/app/src/main/res/layout-land/adyen_credit_card_pre_selected.xml
+++ b/app/src/main/res/layout-land/adyen_credit_card_pre_selected.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:animateLayoutChanges="true"
     android:theme="@style/AdyenMaterialAppTheme"
     >
 
@@ -14,7 +13,6 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:animateLayoutChanges="true"
       >
     <ProgressBar
         android:id="@+id/fragment_credit_card_authorization_progress_bar"
@@ -29,148 +27,158 @@
         android:id="@+id/payment_methods"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_card"
         android:elevation="2dp"
         android:visibility="invisible"
         tools:visibility="visible"
         >
-
-      <androidx.constraintlayout.widget.Guideline
-          android:id="@+id/mid_guideline"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:orientation="vertical"
-          app:layout_constraintGuide_percent="0.46"
-          />
-
       <View
           android:id="@+id/top_separator"
           android:layout_width="0dp"
           android:layout_height="1dp"
           android:layout_marginTop="@dimen/big_margin"
           android:background="@color/layout_separator_color"
-          app:layout_constraintBottom_toTopOf="@id/payment_methods_header"
+          app:layout_constraintBottom_toTopOf="@id/content_main"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           />
-
-      <include
-          android:id="@+id/payment_methods_header"
-          layout="@layout/payment_methods_header"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="@dimen/big_margin"
-          android:layout_marginTop="19dp"
-          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/top_separator"
-          />
-
-      <include
-          android:id="@+id/bonus_layout_pre_selected"
-          layout="@layout/view_purchase_bonus"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="@dimen/big_margin"
-          android:layout_marginTop="19dp"
-          android:layout_marginEnd="@dimen/big_margin"
-          android:visibility="invisible"
-          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
-          tools:visibility="visible"
-          />
-
-      <TextView
-          android:id="@+id/bonus_msg_pre_selected"
-          style="@style/TopUpTextStyle.Small.BonusText"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="@dimen/big_margin"
-          android:layout_marginTop="11dp"
-          android:layout_marginEnd="@dimen/big_margin"
-          android:gravity="center_vertical"
-          android:text="@string/gamification_purchase_body"
-          android:visibility="invisible"
-          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/bonus_layout_pre_selected"
-          tools:visibility="visible"
-          />
-      <ScrollView
-          android:id="@+id/payment_scroll"
-          android:layout_width="0dp"
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/content_main"
+          android:layout_width="match_parent"
           android:layout_height="0dp"
-          android:layout_marginStart="16dp"
-          android:overScrollMode="never"
-          android:scrollbars="none"
-          app:layout_constraintBottom_toTopOf="@id/more_payment_methods"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="@id/mid_guideline"
+          app:layout_constraintBottom_toTopOf="@id/dialog_buy_buttons_payment_methods"
+          app:layout_constraintHeight_default="wrap"
           app:layout_constraintTop_toBottomOf="@id/top_separator"
           >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            >
-          <include
-              android:id="@+id/layout_pre_selected"
-              layout="@layout/selected_payment_method_cc"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              />
-          <Button
-              android:id="@+id/change_card_button_pre_selected"
-              style="?android:attr/borderlessButtonStyle"
-              android:layout_width="wrap_content"
-              android:layout_height="@dimen/button_height"
-              android:layout_below="@id/layout_pre_selected"
-              android:layout_alignParentEnd="true"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:layout_marginEnd="16dp"
-              android:fontFamily="sans-serif-medium"
-              android:lineSpacingExtra="5sp"
-              android:text="@string/activity_iab_change_card"
-              android:textColor="@color/btn_cancel_text"
-              android:textSize="12sp"
-              android:visibility="gone"
-              tools:visibility="visible"
-              />
-          <include
-              android:id="@+id/fragment_adyen_error_pre_selected"
-              layout="@layout/support_error_layout"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:visibility="gone"
-              />
-        </RelativeLayout>
-      </ScrollView>
-      <Button
-          android:id="@+id/more_payment_methods"
-          style="?android:attr/borderlessButtonStyle"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginEnd="4dp"
-          android:drawableEnd="@drawable/ic_arrow_right"
-          android:text="@string/purchase_more_payment_methods_button"
-          android:textColor="@color/text_button_color"
-          android:textSize="12sp"
-          app:layout_constraintBottom_toTopOf="@+id/dialog_buy_buttons_payment_methods"
-          app:layout_constraintEnd_toEndOf="parent"
-          />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/mid_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.46"
+            />
+
+        <include
+            android:id="@+id/payment_methods_header"
+            layout="@layout/payment_methods_header"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="19dp"
+            app:layout_constraintEnd_toEndOf="@id/mid_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <include
+            android:id="@+id/bonus_layout_pre_selected"
+            layout="@layout/view_purchase_bonus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="@dimen/big_margin"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@id/mid_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
+            tools:visibility="visible"
+            />
+
+        <TextView
+            android:id="@+id/bonus_msg_pre_selected"
+            style="@style/TopUpTextStyle.Small.BonusText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="@dimen/big_margin"
+            android:gravity="center_vertical"
+            android:text="@string/gamification_purchase_body"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@id/mid_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bonus_layout_pre_selected"
+            tools:visibility="visible"
+            />
+        <ScrollView
+            android:id="@+id/cc_info_view"
+            android:layout_width="0dp"
+            android:layout_height="190dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:animateLayoutChanges="true"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            app:layout_constraintBottom_toTopOf="@id/more_payment_methods"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/mid_guideline"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+          <RelativeLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:layout_marginTop="8dp"
+              >
+            <include
+                android:id="@+id/layout_pre_selected"
+                layout="@layout/selected_payment_method_cc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <Button
+                android:id="@+id/change_card_button_pre_selected"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/button_height"
+                android:layout_below="@id/layout_pre_selected"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="sans-serif-medium"
+                android:lineSpacingExtra="5sp"
+                android:text="@string/activity_iab_change_card"
+                android:textColor="@color/btn_cancel_text"
+                android:textSize="12sp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
+            <include
+                android:id="@+id/fragment_adyen_error_pre_selected"
+                layout="@layout/support_error_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                />
+          </RelativeLayout>
+        </ScrollView>
+        <Button
+            android:id="@+id/more_payment_methods"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:text="@string/purchase_more_payment_methods_button"
+            android:textColor="@color/text_button_color"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
       <View
           android:id="@+id/bottom_separator"
           android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:layout_marginTop="227dp"
           android:background="@color/layout_separator_color"
+          app:layout_constraintBottom_toTopOf="@id/dialog_buy_buttons_payment_methods"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/top_separator"
           />
 
       <androidx.constraintlayout.widget.Guideline
@@ -189,7 +197,6 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/bottom_separator"
           />
 
       <include
@@ -197,11 +204,10 @@
           layout="@layout/dialog_buy_buttons_adyen_error"
           android:layout_width="0dp"
           android:layout_height="48dp"
-          android:visibility="gone"
+          android:visibility="invisible"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@id/bottom_mid_guideline"
-          app:layout_constraintTop_toBottomOf="@id/bottom_separator"
           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
