--- a/app/src/main/res/layout-land/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_confirm.xml
@@ -9,7 +9,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/info_view"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:paddingStart="@dimen/big_margin"
       android:paddingEnd="@dimen/big_margin"
@@ -17,6 +17,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@id/mid_guideline"
       app:layout_constraintTop_toBottomOf="@id/top_separator"
+      app:layout_constraintVertical_bias="0"
       >
 
     <ImageView
@@ -24,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="31dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
@@ -31,6 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
         app:layout_constraintVertical_chainStyle="packed"
         />
 
@@ -40,6 +43,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        android:layout_marginBottom="64dp"
         android:text="@string/carrier_billing_carrier_fees_body"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -92,30 +96,42 @@
       app:layout_constraintGuide_percent="0.5"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.PaymentsHeaderView
-      android:id="@+id/payment_methods_header"
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="19dp"
-      android:layout_marginEnd="@dimen/big_margin"
-      app:layout_constraintEnd_toEndOf="@id/mid_guideline"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/top_separator"
-      />
-
-  <com.asfoundation.wallet.ui.iab.payments.common.PurchaseBonusView
-      android:id="@+id/purchase_bonus"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginEnd="@dimen/big_margin"
       app:layout_constraintBottom_toTopOf="@id/bottom_separator"
       app:layout_constraintEnd_toEndOf="@id/mid_guideline"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
-      />
+      app:layout_constraintTop_toBottomOf="@id/top_separator"
+      app:layout_constraintVertical_bias="0"
+      >
 
+    <com.asfoundation.wallet.ui.iab.payments.common.PaymentsHeaderView
+        android:id="@+id/payment_methods_header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="@dimen/big_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <com.asfoundation.wallet.ui.iab.payments.common.PurchaseBonusView
+        android:id="@+id/purchase_bonus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
+        app:layout_constraintVertical_bias="0"
+        />
+  </androidx.constraintlayout.widget.ConstraintLayout>
   <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/mid_separator"
       android:layout_width="wrap_content"
@@ -143,10 +159,9 @@
       android:id="@+id/bottom_separator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="227dp"
+      app:layout_constraintBottom_toTopOf="@id/dialog_buy_buttons"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/top_separator"
       app:line_orientation="horizontal"
       app:line_type="solid"
       />
@@ -159,7 +174,6 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/bottom_separator"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
