--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -11,7 +11,6 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginTop="16dp"
-      android:animateLayoutChanges="true"
       android:paddingStart="@dimen/big_margin"
       android:paddingEnd="@dimen/big_margin"
       app:layout_constraintBottom_toTopOf="@id/bottom_separator"
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:indeterminateDrawable="@drawable/gradient_progress"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/field_error_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,6 +59,7 @@
         layout="@layout/skeleton_rounded_rectangle"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:animateLayoutChanges="true"
         app:layout_constraintBottom_toBottomOf="@id/phone_number_layout"
         app:layout_constraintEnd_toEndOf="@id/phone_number_layout"
         app:layout_constraintStart_toStartOf="@id/phone_number_layout"
