--- a/app/src/main/res/layout/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_carrier_verify_phone.xml
@@ -67,6 +67,7 @@
       layout="@layout/skeleton_rounded_rectangle"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      android:animateLayoutChanges="true"
       app:layout_constraintBottom_toBottomOf="@id/phone_number_layout"
       app:layout_constraintEnd_toEndOf="@id/phone_number_layout"
       app:layout_constraintStart_toStartOf="@id/phone_number_layout"
