--- a/app/src/main/res/layout/fragment_iab_transaction_completed.xml
+++ b/app/src/main/res/layout/fragment_iab_transaction_completed.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/iab_activity_transaction_completed"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="80dp"
     android:layout_marginEnd="80dp"
+    android:paddingBottom="16dp"
     android:visibility="gone"
     tools:visibility="visible"
     >
