--- a/app/src/main/res/layout/payment_methods_layout.xml
+++ b/app/src/main/res/layout/payment_methods_layout.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:animateLayoutChanges="true"
     android:theme="@style/AppTheme"
     >
 
@@ -79,7 +78,6 @@
           android:id="@+id/payment_methods"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:background="@drawable/background_card"
           android:elevation="2dp"
           >
 
@@ -91,6 +89,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toTopOf="@id/content_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -99,8 +98,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/content_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/bottom_separator"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_default="wrap"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/payment_methods_header"
             >
@@ -122,12 +123,14 @@
               android:layout_width="match_parent"
               android:layout_height="216dp"
               android:layout_centerInParent="true"
+              android:clipToPadding="false"
               android:nestedScrollingEnabled="false"
               android:orientation="vertical"
               android:overScrollMode="never"
               android:paddingStart="16dp"
               android:paddingTop="8dp"
               android:paddingEnd="16dp"
+              android:paddingBottom="8dp"
               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
@@ -140,9 +143,10 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
-              android:layout_marginTop="4dp"
               android:layout_marginEnd="10dp"
               android:orientation="vertical"
+              android:paddingTop="8dp"
+              android:paddingBottom="8dp"
               app:layout_constraintBottom_toBottomOf="@id/content_main"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +234,6 @@
             app:layout_constraintBottom_toTopOf="@id/bonus_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/content_main"
             app:line_orientation="horizontal"
             app:line_type="solid"
             tools:visibility="visible"
@@ -243,7 +246,7 @@
             android:layout_marginStart="@dimen/big_margin"
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/big_margin"
-            app:layout_constraintTop_toBottomOf="@+id/content_main"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_separator_buttons"
             />
 
         <com.asfoundation.wallet.ui.common.SeparatorView
@@ -252,7 +255,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@id/bonus_view"
+            app:layout_constraintBottom_toTopOf="@id/dialog_buy_buttons_payment_methods"
             app:line_orientation="horizontal"
             app:line_type="solid"
             />
@@ -265,7 +268,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bottom_separator_buttons"
             />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
