--- a/app/src/main/res/layout/activity_bottom_sheet_iab.xml
+++ b/app/src/main/res/layout/activity_bottom_sheet_iab.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_sheet_card"
+        android:clipToPadding="false"
+        android:paddingBottom="10dp"
         app:behavior_hideable="false"
         app:behavior_peekHeight="0dp"
         app:layout_behavior="@string/bottom_sheet_behavior"
