--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -67,4 +67,8 @@
   <dimen name="backup_entry_icon_height">54dp</dimen>
   <dimen name="backup_description_normal_text_size">14sp</dimen>
   <dimen name="backup_description_line_spacing_extra">6sp</dimen>
+
+  <!--Subscriptions -->
+
+  <dimen name="subscriptions_image_size">64dp</dimen>
 </resources>
